# kinesisvideo-ros1

./: .gitignore  .rosinstall.master  .travis.yml  CONTRIBUTING.md  README.md  buildspec.yml
.github/workflows/: build_and_test.yml  build_and_test_release_latest.yml  release_latest.repos
kinesis_video_msgs/: CHANGELOG.rst  package.xml
kinesis_video_streamer/: CHANGELOG.rst  CMakeLists.txt  package.xml
kinesis_video_streamer/config/: node_sample_configuration.yaml  sample_configuration.yaml
kinesis_video_streamer/include/kinesis_video_streamer/: credentials.h  ros_stream_subscription_installer.h  streamer.h
kinesis_video_streamer/launch/: kinesis_video_streamer.launch  sample_application.launch
kinesis_video_streamer/src/: credentials.cpp  main.cpp  ros_stream_subscription_installer.cpp  streamer.cpp  subscriber_callbacks.cpp
kinesis_video_streamer/srv/: Command.srv
kinesis_video_streamer/test/: kinesis_video_streamer_test.cpp  kinesis_video_streamer_test_utils.h
